--- a/KrisMobile/bin/AndroidManifest.xml
+++ b/KrisMobile/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/KrisTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,12 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-            android:name=".MenuActivity"
-            android:label="@string/app_name" >
+            android:name="com.example.krismobile.main.MenuActivity"
+            android:label="@string/title_activity_menu" 
+            android:theme="@style/SettingsFragmentTheme" >
         </activity>
-        
     </application>
 
 </manifest>
