Changed Contractor TypeId type to int.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 /.metadata/
 bin/
 KrisMobile/bin
-KrisWeb/.idea/
+KrisWeb/.idea//ssh do githuba.txt
+/ClassDiagramWeb.jpg
+/Dokumentacja implementacyjna - Aleksandra Majchrzak.docx
+/Dokumentacja techniczna - Aleksandra Majchrzak.docx
+/Dokumentacja użytkowania - Aleksandra Majchrzak.docx
+/KrisMobile (2).zip
+/KrisMobile.zip
+/KrisWeb (2).zip
