Added payments activity (in progress).

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /.metadata/
 bin/
-KrisMobile/bin
-KrisWeb/.idea//ssh do githuba.txt
+/KrisMobile/bin/
+/KrisWeb/.idea/
 /ClassDiagramWeb.jpg
 /Dokumentacja implementacyjna - Aleksandra Majchrzak.docx
 /Dokumentacja techniczna - Aleksandra Majchrzak.docx
