Fixed backstack bud on contractor documents.

--- a/KrisMobile/AndroidManifest.xml
+++ b/KrisMobile/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity
             android:name=".contractors.ContractorActivity"
             android:label="@string/title_activity_contractor"
+            android:launchMode="singleTop"
             android:parentActivityName=".contractors.ContractorsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
