--- a/KrisWeb/web/WEB-INF/web.xml
+++ b/KrisWeb/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <context-param>
         <param-name>host</param-name>
-        <param-value>192.168.0.11</param-value>
+        <param-value>localhost</param-value>
     </context-param>
     <context-param>
         <param-name>port</param-name>
